adedd added a few blocks

--- a/app/index.pug
+++ b/app/index.pug
@@ -48,3 +48,105 @@ html(lang="en")
               a.main-menu-item(href="#") Help
               a.main-menu-item(href="#") РУБ | РУС
               a.main-menu-item(href="#") ВОЙТИ 
+    div.banner
+      div.banner-wrapper
+        h1.title 
+          |Medical — Ваше здоровье
+          br 
+          |в надежных руках.
+        form.find(action="#", method="get")
+          input.find-input(type="text" placeholder="|заболевание, процедура, доктор или клиника")
+          input.find-input.find-country-input(type="text" placeholder="Все страны")
+          button.button Найти
+    div.services
+      div.services-wrapper
+        h2.servises-title Выбрать лечение по всему миру
+        div.services-content
+          div.service
+            div.service-content
+              h3.service-title Израиль
+              p.service-subtitle ОНКОЛОГИЯ 
+              p.service-subtitle СТОМАТОЛОГИЯ
+          div.service
+            div.service-content.country2
+              h3.service-title Венгрия
+              p.service-subtitle ОНКОЛОГИЯ 
+              p.service-subtitle СТОМАТОЛОГИЯ
+          div.service
+            div.service-content.country3
+              h3.service-title Mексика
+              p.service-subtitle ОНКОЛОГИЯ 
+              p.service-subtitle СТОМАТОЛОГИЯ
+          div.service
+            div.service-content.country3
+              h3.service-title Таиланд
+              p.service-subtitle ОНКОЛОГИЯ 
+              p.service-subtitle СТОМАТОЛОГИЯ
+          div.service
+            div.service-content.country4
+              h3.service-title Южная Корея
+              p.service-subtitle ОНКОЛОГИЯ 
+              p.service-subtitle СТОМАТОЛОГИЯ
+          div.service
+            div.service-content.country5
+              h3.service-title Германия
+              p.service-subtitle ОНКОЛОГИЯ 
+              p.service-subtitle СТОМАТОЛОГИЯ            
+        h2.servises-title.servises-title-none Найти лечение среди популярных  специальностей
+        h2.servises-title.servises-title-320px Найти лечение по специальности
+        div.other-services
+          div.specialty
+            img.specialty-pic(src="images/Specialty.jpg", alt="Specialty")
+            h3.specialty-title Пластическая Хирургия
+            p.specialty-subtitle Подтяжка лица
+            p.specialty-subtitle Биотерапия
+            img.specialty-pic-arrow(src="images/Arrow.svg", alt="Arrow")
+          div.specialty
+            img.specialty-pic(src="images/Specialty2.jpg", alt="Specialty")
+            h3.specialty-title Офтальмология
+            p.specialty-subtitle Замена хрусталика
+            p.specialty-subtitle Операции на глаза
+            img.specialty-pic-arrow(src="images/Arrow.svg", alt="Arrow")
+          div.specialty
+            img.specialty-pic(src="images/Specialty3.jpg", alt="Specialty")
+            h3.specialty-title Ортопедия
+            p.specialty-subtitle Замена тазобедренного сустава
+            p.specialty-subtitle Замена коленного сустава
+            img.specialty-pic-arrow(src="images/Arrow.svg", alt="Arrow")
+          div.specialty
+            img.specialty-pic(src="images/Specialty4.jpg", alt="Specialty")
+            h3.specialty-title Онкология
+            p.specialty-subtitle Рак поджелудочной 
+            p.specialty-subtitle Химиотерапия
+            img.specialty-pic-arrow(src="images/Arrow.svg", alt="Arrow")
+          div.specialty
+            img.specialty-pic(src="images/Specialty5.jpg", alt="Specialty")
+            h3.specialty-title Стоматология
+            p.specialty-subtitle Имплантанты
+            p.specialty-subtitle консультации
+            img.specialty-pic-arrow(src="images/Arrow.svg", alt="Arrow")
+    div.patient-info
+      div.patient-info-wrapper
+        div.patient-info-title Medikal Пациентам
+        div.info-wrapper
+          div.info
+            div.info-logo
+              img(src="images/Man-icon.svg", alt="info logo")
+            h3.info-title Выбор
+            div.info-description Oгромный выбор многопрофильных и специализированных клиник
+          div.info
+            div.info-logo
+              img(src="images/List-icon.svg", alt="info logo")
+            h3.info-title Что-то другое
+            div.info-description Доступ к лицензиям и другим документам, принятых в системе сертификации конкретного государства    
+          div.info
+            div.info-logo
+              img(src="images/Man-icon.svg", alt="info logo")
+            h3.info-title Информативность
+            div.info-description Подробное описание услуг и особенностей обслуживания в разных медицинских центрах  
+          div.info
+            div.info-logo
+              img(src="images/List-icon.svg", alt="info logo")
+            h3.info-title Защита
+            div.info-description Специальная система защиты данных от взлома
+        button.button.registration-button Зарегистрироваться
