adedd a few blocks

--- a/app/index.pug
+++ b/app/index.pug
@@ -55,7 +55,7 @@ html(lang="en")
           br 
           |в надежных руках.
         form.find(action="#", method="get")
-          input.find-input(type="text" placeholder="|заболевание, процедура, доктор или клиника")
+          input.find-input(type="text" placeholder="Заболевание, процедура, доктор или клиника")
           input.find-input.find-country-input(type="text" placeholder="Все страны")
           button.button Найти
     div.services
@@ -150,3 +150,84 @@ html(lang="en")
             h3.info-title Защита
             div.info-description Специальная система защиты данных от взлома
         button.button.registration-button Зарегистрироваться
+    div.benefits
+      div.benefits-wrapper
+        h2.benefits-title Преимущества Medical для признанных  клиник и врачей
+          div *
+        div.ofer-and-organizations
+          div.ofer
+            h3.ofer-title ЗАРЕГИСТРИРУЙТЕ ВАШУ ПРАКТИКУ НА MEDIkAl
+            div.ofer-benefits
+              div.benefit
+                div.benefit-icon
+                  img(src="images/ok.svg")
+                p.benefit-description Привлечь новых пациентов
+              div.benefit
+                div.benefit-icon
+                  img(src="images/ok.svg")
+                p.benefit-description Построить и укрепить репутацию онлайн
+              div.benefit
+                div.benefit-icon
+                  img(src="images/ok.svg")
+                p.benefit-description Обеспечить премиум опыт своим пациентам    
+            button.button.ofer-button Начать практику с Медикал
+          div.organizations
+            div.organization
+              img.organization-logo(src="images/meddia-logo.png")
+              p.organization-name Joint Commision Accreditation
+            div.organization
+              img.organization-logo(src="images/meddia-logo2.png")
+              p.organization-name International Organization for Standardization
+            div.organization
+              img.organization-logo(src="images/meddia-logo3.png")
+              p.organization-name American Society of Plastic Surgeons
+            div.organization
+              img.organization-logo(src="images/meddia-logo4.png")
+              p.organization-name American Dental Association (ADA)
+            div.organization
+              img.organization-logo(src="images/meddia-logo5.png")
+              p.organization-name EURAPS European Association of Plastic Surgeons
+            div.organization
+              img.organization-logo(src="images/meddia-logo6.png")
+              p.organization-name European Dental Association (EDA)
+            div.organization
+              img.organization-logo(src="images/meddia-logo7.png")
+              p.organization-name Israel Orthodontic Society
+            div.organization
+              img.organization-logo(src="images/meddia-logo8.png")
+              p.organization-name The Israeli Society of Plastic and Aesthetic Surgery
+            div.organization
+              img.organization-logo(src="images/meddia-logo9.png")
+              p.organization-name Israel Dentist  Society
+        div.benefits-note-wrapper
+          div.benefits-note
+            div.note-icon *
+            div.note-description
+              |На сайте MEDIKAL размещена информация только о больницах и клиниках, 
+              |получивших медицинские сертификаты и аккредитацию самых авторитетных международных обществ.    
+    div.ofer-mobile
+      h3.ofer-mobile-title Вы лучший специалист в своей области?
+      button.button.ofer-button.ofer-button-mobile Начать практику на Медикал
+    div.cooperation
+      div.cooperation-wrapper
+        div.cooperation-pic
+          img(src="images/Doctor.png" alt="cooperation-pic")
+        div.cooperation-info
+          h3.coperation-title Мedikal работает на прямую с ведущими клиниками
+          p.coperation-subtitle 
+            |Наши услуги для вас, мы оказываем консультации по соглашению с клиниками-партнерами 
+        div.cooperation-pic
+          img(src="images/Doctor.png" alt="cooperation-pic")
+    footer
+      div.footer-wrapper
+        div.footer-contacts
+          div.call-us
+            a.phone-number(href="tel:+7464235619") +7464235619
+            p.slogan Вы всегда можетет получить консультацию у наших менеджеров!
+          div.write-us
+            button.button.button-write-us НАПИСАТЬ НАМ
+            a.social.social-vk(href="#")
+              img(src="images/vk.svg")
+            a.social.social-fb(href="#")
+              img(src="images/fb.svg")  
+        div.footer-columns
